--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation project(':lib_network')
     implementation project(':lib_common_ui')
     implementation project(':lib_base')
+    implementation project(':lib_image_loader')
     //rx系列引入
     implementation rootProject.depsLibs.rxjava
     implementation rootProject.depsLibs.rxandroid
