--- a/lib_common_ui/build.gradle
+++ b/lib_common_ui/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compileOnly project(':lib_base')
 
     compileOnly rootProject.depsLibs.appcompact
+    api rootProject.depsLibs.recyclerview
 
     //ARouter库
     compileOnly(rootProject.depsLibs.arouterapi) {
@@ -46,6 +47,5 @@ dependencies {
     annotationProcessor rootProject.depsLibs.aroutercompiler
 
     compileOnly 'com.wang.avi:library:1.0.2'
-    compileOnly 'com.zhy:percent-support-extends:1.1.1'
 
 }
