修复一些警告

--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     }
     annotationProcessor rootProject.depsLibs.aroutercompiler
 
+
+    implementation rootProject.depsLibs.eventbus
+
 }
